--- a/style.css
+++ b/style.css
@@ -409,6 +409,17 @@ section {
 
 /* Адаптивность */
 @media (max-width: 768px) {
+
+    .header {
+        background: #fff;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        position: fixed;
+        width: 100%;
+        top: 0;
+        z-index: 1000;
+}
+
+
     .nav-list {
         flex-direction: column;
         height: auto;
@@ -442,6 +453,14 @@ section {
     }
     
     .nav-link {
-        border-radius: 8px;
+        text-decoration: none;
+        color: #333;
+        font-weight: 600;
+        font-size: 0.3rem;
+        padding: 0.4rem 0.5rem;
+        display: block;
+        transition: all 0.3s ease;
+        border-radius: 5px;
+        position: relative;
     }
 }
